# CrabGrab

./: Cargo.toml  LICENSE  LICENSE-MIT  LICENSE.md  LICENSE.txt  README.md  update_doc_copy.ps1  update_doc_copy.sh
docs/: index.html
docs/macos_docs/: help.html  search-index.js  settings.html  src-files.js
docs/windows_docs/: help.html  search-index.js  settings.html  src-files.js
docs_copy/: search-index.js  settings.html  src-files.js
docs_copy/crabgrab/: all.html  index.html  sidebar-items.js
docs_copy/futures/: all.html  index.html  macro.poll.html  macro.ready.html  macro.select.html  macro.select_biased.html  macro.stream_select.html  macro.try_join.html
docs_copy/futures_channel/: all.html  index.html
docs_copy/futures_core/: all.html  macro.ready.html
docs_copy/futures_executor/: fn.block_on.html
docs_copy/futures_io/: all.html  trait.AsyncBufRead.html  trait.AsyncSeek.html  trait.AsyncWrite.html
docs_copy/futures_macro/: index.html  macro.join_internal.html
docs_copy/futures_task/: fn.noop_waker.html  struct.SpawnError.html  trait.Spawn.html
docs_copy/futures_util/: index.html  macro.pending.html  macro.select_biased.html  macro.try_join.html
docs_copy/lock_api/: struct.Mutex.html  struct.MutexGuard.html
docs_copy/memchr/: struct.Memchr.html  struct.Memchr3.html
docs_copy/slab/: struct.IntoIter.html  struct.Iter.html  struct.Slab.html
docs_copy/smallvec/: struct.Drain.html  struct.SmallVec.html
docs_copy/syn/: all.html  enum.Expr.html  enum.Lit.html  enum.Member.html  enum.Meta.html  enum.RangeLimits.html  enum.StaticMutability.html  enum.Stmt.html  enum.TraitItem.html  enum.Type.html  enum.TypeParamBound.html  fn.parse_file.html  index.html  macro.parse_quote.html  sidebar-items.js  struct.DeriveInput.html  struct.ExprArray.html  struct.ExprAwait.html  struct.ExprConst.html  struct.ExprContinue.html  struct.ExprField.html  struct.ExprForLoop.html  struct.ExprIndex.html  struct.ExprLit.html  struct.ExprLoop.html  struct.ExprMacro.html  struct.ExprMethodCall.html  struct.ExprPath.html  struct.ExprRange.html  struct.ExprReference.html  struct.ExprYield.html  struct.FieldPat.html  struct.ForeignItemFn.html  struct.ForeignItemMacro.html  struct.ForeignItemType.html  struct.ImplItemFn.html  struct.ItemConst.html  struct.ItemEnum.html  struct.ItemExternCrate.html  struct.ItemForeignMod.html  (+20 more)
docs_copy/windows/: all.html  index.html
docs_copy/windows_core/: all.html  fn.factory.html  index.html  macro.h.html  macro.s.html  struct.AgileReference.html  struct.Array.html  struct.BSTR.html  struct.Event.html  struct.HSTRING.html  struct.IInspectable.html  struct.PCSTR.html  struct.Weak.html  trait.AsImpl.html  trait.ComInterface.html  type.Result.html
docs_copy/windows_targets/: all.html  macro.link.html  sidebar-items.js
docs_copy/windows_x86_64_msvc/: all.html
examples/: capture_display.rs  capture_window.rs  content_picker.rs  feature_bitmap.rs  feature_bitmap_pooled.rs  feature_diagnostic.rs  feature_dx11.rs  feature_screenshot.rs  feature_wgpu.rs  macos_platform.rs  platform_extensions.rs
macos_docs/: crates.js  help.html  search-index.js  settings.html  src-files.js
macos_docs/bitflags/: struct.Flag.html  trait.Bits.html  trait.Flags.html
macos_docs/block/: all.html  index.html  sidebar-items.js  struct.Block.html  struct.ConcreteBlock.html  struct.RcBlock.html  trait.BlockArguments.html  trait.IntoConcreteBlock.html
macos_docs/cocoa/: all.html  index.html  macro.delegate.html  sidebar-items.js
macos_docs/cocoa_foundation/: all.html  index.html  sidebar-items.js
macos_docs/core_foundation/: all.html  index.html  macro.declare_TCFType.html  macro.impl_CFComparison.html  macro.impl_CFTypeDescription.html  macro.impl_TCFType.html  trait.ConcreteCFType.html
macos_docs/core_foundation_sys/: all.html  index.html  sidebar-items.js
macos_docs/core_graphics/: all.html  index.html  sidebar-items.js
macos_docs/core_graphics_types/: all.html  index.html  sidebar-items.js
macos_docs/crabgrab/: all.html  index.html
macos_docs/foreign_types/: all.html  index.html  macro.foreign_type.html  struct.Opaque.html  trait.ForeignType.html  trait.ForeignTypeRef.html
macos_docs/foreign_types_macros/: all.html  index.html  macro.foreign_type_impl!.html  macro.foreign_type_impl.html  sidebar-items.js
macos_docs/foreign_types_shared/: all.html  index.html  struct.Opaque.html  trait.ForeignType.html  trait.ForeignTypeRef.html
macos_docs/futures_io/: trait.AsyncBufRead.html
macos_docs/futures_task/: struct.FutureObj.html
macos_docs/libc/: all.html  constant.ABDAY_1.html  constant.ABDAY_2.html  constant.ABDAY_3.html  constant.ABDAY_4.html  constant.ABDAY_5.html  constant.ABDAY_6.html  constant.ABDAY_7.html  constant.ABMON_1.html  constant.ABMON_10.html  constant.ABMON_11.html  constant.ABMON_12.html  constant.ABMON_2.html  constant.ABMON_3.html  constant.ABMON_4.html  constant.ABMON_5.html  constant.ABMON_6.html  constant.ABMON_7.html  constant.ABMON_8.html  constant.ABMON_9.html  constant.ACCOUNTING.html  constant.AF_APPLETALK.html  constant.AF_CCITT.html  constant.AF_CHAOS.html  constant.AF_CNT.html  constant.AF_COIP.html  constant.AF_DATAKIT.html  constant.AF_DECnet.html  constant.AF_DLI.html  constant.AF_E164.html  constant.AF_ECMA.html  constant.AF_HYLINK.html  constant.AF_IEEE80211.html  constant.AF_IMPLINK.html  constant.AF_INET.html  constant.AF_INET6.html  constant.AF_IPX.html  constant.AF_ISDN.html  constant.AF_ISO.html  constant.AF_LAT.html  (+2920 more)
macos_docs/lock_api/: struct.MappedMutexGuard.html  struct.MappedReentrantMutexGuard.html  struct.MappedRwLockWriteGuard.html  struct.MutexGuard.html  struct.RwLockUpgradableReadGuard.html  struct.RwLockWriteGuard.html
macos_docs/log/: all.html  enum.Level.html  enum.LevelFilter.html  fn.set_logger.html  fn.set_logger_racy.html  index.html  (+7 more)
spellcheck/: cfg.toml  crabgrab.dic
src/: capturable_content.rs  capture_stream.rs  frame.rs  lib.rs  prelude.rs  util.rs
tests/: capturable_content.rs  capture_display.rs
windows_docs/: crates.js  help.html  search-index.js  src-files.js
(+9290 files in other folders)
