[package]
name = "crabgrab"
version = "0.1.0"
edition = "2021"

[features]
iosurface = []
metal = ["dep:metal"]
dxgi = []
dx11 = ["dxgi"]
bitmap = ["dep:bytemuck", "dep:half"]
screenshot = ["bitmap"]
content_picker = []
wgpu = ["dep:wgpu"]

[target.'cfg(target_os = "macos")'.features]
wgpu = ["metal"]

[target.'cfg(target_os = "windows")'.features]
bitmap = ["dx11"]

[dependencies]
futures = "0.3"
parking_lot = "0.12"
half = { version = "2.4", optional = true }
bytemuck = { version = "1.15", optional = true }
wgpu = { version = "^0.19", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa-foundation = "0.1.0"
block = "0.1.6"
objc = "0.2.7"
cocoa = "0.24"
libc = "~0.2.33"
objc2 = "0.3.0-beta.5"
metal = { version = "0.27", optional = true }
lazy_static = "1.4"
core-graphics-types = "*"
mach2 = "*"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Graphics_Capture",
    "Graphics_DirectX_Direct3D11",
    "Win32_Graphics",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D10",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Gdi",
    "Win32_UI_HiDpi",
    "Win32_Graphics_Hlsl",
    "Win32_Media_Audio",
    "Win32_System_ProcessStatus",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_System_WinRT",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Foundation",
    "Security_Authorization_AppCapabilityAccess",
    "UI_Core",
    "ApplicationModel_Core",
] }

[dev-dependencies]
tokio = { version = "*", features = ["rt", "macros", "rt-multi-thread"] }
winit = "*"
