[package]
name = "crabgrab"
description = "A cross-platform screen/window capture crate"
version = "0.2.3"
edition = "2021"
authors = ["Augmend, Inc. <https://github.com/AugmendTech>", "Liam Taylor <https://github.com/OutOfTheVoid>", "Tim Misiak <https://github.com/TimMisiak>"]
documentation = "https://docs.rs/crabgrab"
readme = "README.md"
homepage = "https://github.com/AugmendTech/CrabGrab"
repository = "https://github.com/AugmendTech/CrabGrab"
license = "MIT OR Apache-2.0"
keywords = ["capture", "graphics", "window", "screen", "media"]
categories = ["graphics", "hardware-support", "multimedia", "os"]
exclude = ["spellcheck/", "update_doc_copy.ps1", "update_doc_copy.sh", "docs/", ".gitignore", ".vscode/"]

[package.metadata.docs.rs]
features = ["iosurface", "metal", "dxgi", "dx11", "bitmap", "screenshot", "wgpu"]
targets = ["x86_64-pc-windows-msvc"]

[package.metadata.spellcheck]
config = "spellcheck/cfg.toml"

[features]
iosurface = []
metal = ["dep:metal"]
dxgi = []
dx11 = ["dxgi"]
bitmap = ["dep:bytemuck", "dep:half", "dx11"]
screenshot = ["bitmap"]
wgpu = ["dep:wgpu", "dep:winapi", "dx11", "dxgi", "metal"]

[dependencies]
futures = "0.3"
parking_lot = "0.12"
half = { version = "2.4", optional = true }
bytemuck = { version = "1.15", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.5"
libc = "~0.2.33"
objc2 = "0.5"
metal = { version = "0.28", optional = true }
lazy_static = "1.4"
core-graphics-types = "0.1"
mach2 = "0.4"
wgpu = { version = "^0.20", optional = true, features = ["metal", "hal"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Graphics_Capture",
    "Graphics_DirectX_Direct3D11",
    "Win32_Graphics",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D10",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Direct3D11on12",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Gdi",
    "Win32_UI_HiDpi",
    "Win32_Graphics_Hlsl",
    "Win32_Media_Audio",
    "Win32_System_ProcessStatus",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_System_WinRT",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Foundation",
    "Security_Authorization_AppCapabilityAccess",
    "UI_Core",
    "ApplicationModel_Core",
] }
wgpu = { version = "0.20", optional = true, features = ["dx12", "hal"] }
d3d12 = "0.20"
winapi = { version = "0.3", optional = true }

[dev-dependencies]
futures = "0.3"
tokio = { version = "1.37", features = ["rt", "macros", "rt-multi-thread"] }
wgpu = "0.20"
